tests/paczka2/big_fuzzy/36615019.err
Error in line 4: aQMf7gv S697 6,2
Error in line 18: S697 A977 25,2
Error in line 24: wvEZ A192 13,0
Error in line 32: 5LTdShStF A977 91,3
Error in line 40: YkDDI0ACiaA S697 18,3
Error in line 41: YkDDI0ACiaA A977 60,5
Error in line 58: MwR S6U7 75,1
Error in line 62: MwR S697 111,9
Error in line 63: MwR A192 58,6
Error in line 64: MwR A977 53,0
Error in line 60: aQMf7gv S697 46,3
Error in line 70: YkDDI0ACiaA A189 38,2
Error in line 77: MwR A189 7,4
Error in line 81: YkDDI0ACiaA A189 82,8
Error in line 110: MwR S697 80,7
Error in line 106: C1YI3 A189 1,2
Error in line 116: C1YI3 S697 67,0
Error in line 117: C1YI3 A192 51,8
Error in line 115: 5LTdShStF A977 12,8
Error in line 122: aQMf7gv A977 79,6
Error in line 128: MwR A977 82,3
Error in line 133: wvEZ A189 20,5
Error in line 127: aQMf7gv A192 23,3
Error in line 140: wvEZ S697 51,4
Error in line 134: YkDDI0ACiaA A189 62,3
Error in line 145: S697 A189 99,6
Error in line 149: S697 A192 -1,1
Error in line 157: aQMf7gv A192 80,9
Error in line 165: MwR A192 28,1
Error in line 167: 5LTdShStF A977 81,8
Error in line 166: MwR A977 28,4
Error in line 143: wvEZ A192 442,0
Error in line 168: aQMf7gv A189 8,2
Error in line 180: C1YI3 A189 95,5
Error in line 182: aQMf7gv A977 15,8
Error in line 189: MwR A192 6,1
Error in line 200: YkDDI0ACiaA A192 11
Error in line 201: ,6
Error in line 198: wvEZ S697 59,6
Error in line 205: wvEZ A189 73,4
Error in line 224: 5LTdShStF S697 66,04
Error in line 225: wvEZ S697 -1,8
Error in line 220: aQMf7gv A189 322,9
Error in line 196: YkDDI0ACiaA A192 28,9
Error in line 223: 5LTdShStF S697 19,2
Error in line 230: 5LTdShStF A977 90,4
Error in line 219: S697 A192 55,7
Error in line 222: C1YI3 A977 97,4
